objects/PayrollWidgetLinks__c.object
<CustomObject>
    <fields>
        <fullName>BillingAndFinancialInformation__c</fullName>
        <label>BillingAndFinancialInformation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Server_URL__c</fullName>
        <label>CS Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canadian_CS_Server_URL__c</fullName>
        <label>Canadian CS Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Deposits__c</fullName>
        <label>Direct Deposits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Contractors__c</fullName>
        <label>Employees Contractors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Filed_CS_Server__c</fullName>
        <label>Forms Filed CS Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Filed_Sentinal__c</fullName>
        <label>Forms Filed Sentinal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Details__c</fullName>
        <label>Payroll Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paystubs_by_Date__c</fullName>
        <label>Paystubs by Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Login_URL__c</fullName>
        <label>Public Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionFees_OtherCharges__c</fullName>
        <label>SubscriptionFees&amp;OtherCharges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Liabilities__c</fullName>
        <label>Tax Liabilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Payments_Due__c</fullName>
        <label>Tax Payments Due</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Payments_Made__c</fullName>
        <label>Tax Payments Made</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Wage_Summary__c</fullName>
        <label>Tax &amp; Wage Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>